# gltest

./: .ctags  .gitignore  CMakeLists.txt  README.md  camera.c  camera.h  context.c  context.h  gltest.c  input.c  input.h  loaders.c  loaders.h  model.c  model.h  texture.c  texture.h  window.c  window.h
test/: loaders_test.c
textures/: bricks.dds
